--- a/NetExplorer/templates/NetExplorer/regulatory_links_table.html
+++ b/NetExplorer/templates/NetExplorer/regulatory_links_table.html
@@ -108,7 +108,7 @@
                 "order": [[ 6, "desc" ]],
                 dom: 'Bfrtip',
                 buttons: [
-                    'csv',
+                    'csvHtml5',
                     {
                         text: 'Send to Network viewer',
                         action: function ( e, dt, node, config ) {
