Link for tsne wikipedia

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -171,7 +171,7 @@
 
 
                 <blockquote>
-                    Visualize the cells in this experiment in plotted two dimensions, thanks to a <a href="" target="_blank">T-distributed Stochastic Neighbor Embedding</a><div class="">
+                    Visualize the cells in this experiment in plotted two dimensions, thanks to a <a href="https://en.wikipedia.org/wiki/T-distributed_stochastic_neighbor_embedding" target="_blank">T-distributed Stochastic Neighbor Embedding</a><div class="">
                     <br>
                     Choose to color the cells by condition (clusters of cells, experimental conditions, etc.) or by the expression of a specific gene by
                     using the different tabs.
