--- a/NetExplorer/templates/NetExplorer/markers_table.html
+++ b/NetExplorer/templates/NetExplorer/markers_table.html
@@ -42,7 +42,7 @@
                         <td>
                             <a class="card-trigger"
                                 title="Click to view info card"
-                                target="{{ markhomolog }}"
+                                target="{{ mark.homolog }}"
                                 targetDB="Human">
                                 {{ mark.homolog }} 
                             </a>
