tsneplot multiple genes now color by mean expression

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -241,9 +241,9 @@
                         </div>
 
                         <hr>
-                        <input type="radio" name="planexp-tsne-search-type" value="single" checked> Color by expression of <b>one</b> gene.
+                        <input type="radio" name="planexp-tsne-search-type" value="single" checked> Colors by expression of <b>one</b> gene and shows all cells.
                         <br><br>
-                        <input type="radio" name="planexp-tsne-search-type" value="multiple"> Shows only cells expressing <b>all</b> input genes.
+                        <input type="radio" name="planexp-tsne-search-type" value="multiple"> Colors by mean expression of input genes and shows only cells expressing <b>all</b> input genes.
 
                         <span class="input-group-btn input-grp-withlabel">
                             <button type="submit" value=" Send" class="btn btn-danger plot-tsne-btn" id="submit">Plot tSNE</button>
