--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -179,6 +179,14 @@
                     <option value="violin">Violin-Bar Plot</option>
                     <option value="line">Line Chart</option>
                 </select>
+                
+                <br>
+                <div id="gene-expression-expressed-container">
+                    <input type="checkbox" id="gene-expression-expressed" name="gene-expression-expressed"> Show only expressed cells.
+                </div>
+                <br>
+
+                
                 <div id="plot-container">
                     <div id="plot-genenotfound">
                         <span class="glyphicon glyphicon-warning-sign"></span>
