Gene co-expression plot works. Improved msg error for GO.

--- a/NetExplorer/templates/NetExplorer/goea_plots.html
+++ b/NetExplorer/templates/NetExplorer/goea_plots.html
@@ -1,5 +1,6 @@
 {% load staticfiles %} 
 
+<br><br>
 {% if plots %}
 
     <ul class="nav nav-tabs" id="goea-domain">
@@ -34,6 +35,9 @@
             })
     
     </script>
+
+{% else %}
+    No results
 {% endif %}
 
     
