--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2147,6 +2147,8 @@ kbd {
 
 #select-dataset { display: none; }
 #planexp-gene-expression { display: none; }
+#planexp-gene-coexpression { display: none; }
+
 .gene-expression-search-container { width: 50%; }
 
 #plot-container { 
@@ -2161,6 +2163,14 @@ kbd {
 }
 
 #expression-plot { 
+    display: inline-block; 
+    min-height: 500px; 
+    min-width: 700px; 
+    width: 100%;
+    background-color: #f4f4f4; 
+}
+
+#coexpression-plot { 
     display: inline-block; 
     min-height: 500px; 
     min-width: 700px; 
@@ -2239,6 +2249,15 @@ kbd {
     background-color: #FDD4D4;  
 }
 
+#coexpression-plot-genenotfound {
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;  
+}
+
 #dge-table-notfound {
     display: none; 
     margin: auto;
@@ -2258,6 +2277,14 @@ kbd {
 }
 
 #expression-plot-loading {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    left: calc(50% - 75px);
+    margin-top: 175px;
+}
+
+#coexpression-plot-loading {
     display: none;
     position: absolute;
     z-index: 2;
@@ -2345,6 +2372,8 @@ kbd {
 #planexp-network-toc { display: none; }
 #planexp-links-toc { display: none; }
 #planexp-markers-toc { display: none; }
+#planexp-gene-coexpression-toc { display: none; }
+
 
 #planexp-cyt { background-color: #f4f4f4; width: 100%; height: 720px;}
 
@@ -2618,4 +2647,12 @@ summary { display: list-item !important; }
 #gene-expression-expressed-container {
     display: none;
     margin-top: 25px;
+}
+
+.ctype-select {
+    min-width: 200px;
+}
+
+#coexpression-ctype {
+    left: 0 !important;
 }
