--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -512,6 +512,13 @@
                         <div class="minExp-container">
                             <output name="minExpOutput" id="minExpOutput">2.5</output>
                         </div>
+                        <br>
+                        <div class="text-center">
+                            <div id="planexp-filter-network" class="btn btn-default">
+                                Filter Network
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
