Set number to Regulatory Links added.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -397,6 +397,19 @@
                 </blockquote>
 
                 <br>
+                <select id="links-group" name="links-group" class="selectpicker" title="Select Top Links">
+                    <option value="1" selected>1-100</option>
+                    <option value="2">100-200</option>
+                    <option value="3">200-300</option>
+                    <option value="4">300-400</option>
+                    <option value="5">400-500</option>
+                    <option value="6">500-600</option>
+                    <option value="7">600-700</option>
+                    <option value="8">700-800</option>
+                    <option value="9">800-900</option>
+                    <option value="10">900-1000</option>
+                </select>
+                <br><br>
                 <div id="planexp-links-table-container">
                     
                 </div>
