--- a/NetExplorer/templates/NetExplorer/tutorial.html
+++ b/NetExplorer/templates/NetExplorer/tutorial.html
@@ -13,7 +13,7 @@
             <li><a href="#genesearch">Gene Search</a></li>
             <li><a href="#netexplorer">NetExplorer</a></li>
             <li><a href="#pathwayfinder">Pathway Finder</a></li>
-            {% if user.is_authenticated %}<li><a href="#planexp">PlanExp</a></li>{% endif %}
+            <li><a href="#planexp">PlanExp</a></li>
             <hr>
             <li id="back_home"><a href="{% url 'index_view' %}" ><span class="glyphicon glyphicon-triangle-left"></span>Go back Home</a></li>
         </ul>
@@ -438,7 +438,6 @@
     </div>
 </div>
 
-    {% if user.is_authenticated %}
         <div class="tutorial-panel panel panel-danger">
             <div class="panel-heading"><a class="tutorial-title"  name="planexp"><h3>PlanExp</h3></a></div>
             <div class="panel-body">
@@ -466,7 +465,6 @@
             </div>
 
         </div>
-    {% endif %}
 </div>
 </div>
 
