--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -186,7 +186,7 @@
                 
                 <br>
                 <div id="gene-expression-expressed-container">
-                    <input type="checkbox" id="gene-expression-expressed" name="gene-expression-expressed"> Show only expressed cells.
+                    <input type="checkbox" id="gene-expression-expressed" name="gene-expression-expressed"> Show only expressing cells.
                 </div>
                 <br>
 
