--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -113,7 +113,14 @@
     <br>
     <h2 id="update-notes">Update Notes</h2>
     <hr>
+    <h3>v1.3: May 8th 2019</h3>
+    <ul class="update-notes-ul">
+        <li><a href="{% url 'planexp' %}">PlanExp</a> is now publicly available.</li>
+    </ul>
     
+    <br>
+    <br>
+
     <h3>v1.2: January 23rd 2019</h3>
     <ul class="update-notes-ul">
         <li>Schmidtea mediterranea predicted genes (see: <a href="https://academic.oup.com/nar/article/47/D1/D812/5212006" target="_blank">A. Rozanski et al.</a>) as well as their associated transcripts have been included in PlanNET as SmesGene and Smest respectively.</li>
